# webchat

./: main.py  pyproject.toml
static/: ChatClient.js  webchat.css
templates/: index.html
