[tool.poetry]
name = "spymaster"
version = "0.1.0"
description = ""
authors = ["J. M. F. Tsang <j.m.f.tsang@cantab.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
websockets = "^12.0"
uvicorn = "^0.25.0"
jinja2 = "^3.1.2"
dataclasses-json = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
